# livox_detect

./: .gitignore  CMakeLists.txt  README.md
data/: 1589169525_9.pcd
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: livox_detect.pc
devel/share/livox_detect/cmake/: livox_detect-msg-extras.cmake  livox_detect-msg-paths.cmake  livox_detectConfig.cmake
devel/share/livox_detection/cmake/: livox_detection-msg-paths.cmake
devel/share/roseus/ros/livox_detect/: manifest.l
include/: config.h  livox_detection.hpp  nms_cuda.h  postprocess_cuda.h
models/: livox_head_sim.onnx
src/: iou3d_nms_kernel.cu  livox_detection.cpp  main.cpp  postprocess_cuda.cu
src/autoware_msgs/: CMakeLists.txt
src/livox_detect/: CMakeLists.txt  package.xml
src/livox_detect/data/: 1589169520_1.pcd
src/livox_detect/include/: clip.h  iou3d_nms.h  livox_detection.hpp
src/livox_detect/include/my_detection/: point_types.h
src/livox_detect/launch/: livox_detection.launch
src/livox_detect/rviz/: kitti.rviz
src/livox_detect/src/: clip.cpp  iou3d_nms.cpp  iou3d_nms_kernel.cu  livox_detection.cpp  main.cpp  postprocess_cuda.cu
src/visualization/decision_maker_panel/: CMakeLists.txt
src/visualization/detected_objects_visualizer/: CMakeLists.txt
src/visualization/detected_objects_visualizer/include/: visualize_rects.h
src/visualization/detected_objects_visualizer/src/: visualize_detected_objects.cpp
src/visualization/fastvirtualscan/: CMakeLists.txt
src/visualization/points2image/: CMakeLists.txt
src/visualization/points2image/nodes/points2image/: points2image.cpp
src/visualization/rosinterface/: CMakeLists.txt
src/visualization/state_panel/: CMakeLists.txt
